# docs/swagger.yaml
@@ -18,6 +18,21 @@ definitions:
         example: yacht
         type: string
     type: object
+  admin.UpdateYachtRequest:
+    properties:
+      description:
+        type: string
+      id:
+        type: integer
+      image:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      type:
+        type: string
+    type: object
   admin.Yacht:
     properties:
       created:
@@ -152,7 +167,7 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create new yacht
+      description: Create yacht
       parameters:
       - description: body
         in: body
@@ -178,7 +193,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Create new yacht
+      description: List yachts
       responses:
         "200":
           description: OK
@@ -218,6 +233,57 @@ paths:
         "503":
           description: Service Unavailable
       summary: Remove
+      tags:
+      - admin
+  /admin/yacht/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Find yacht
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.Yacht'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: Find
+      tags:
+      - admin
+  /admin/yacht/update:
+    patch:
+      consumes:
+      - application/json
+      description: Update yacht
+      parameters:
+      - description: body
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/admin.UpdateYachtRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin.Yacht'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+        "503":
+          description: Service Unavailable
+      summary: Update
       tags:
       - admin
 schemes:
