# sailing/models.go
@@ -13,23 +13,23 @@ type Account struct {
 }
 
 type Yacht struct {
-	ID          uint      `gorm:"primaryKey"`
-	Name        string    `json:"name"`
-	Type        string    `json:"type"`
-	Price       float32   `json:"price"`
-	Image       string    `json:"image"`
-	Description string    `json:"description"`
-	Created     time.Time `json:"created"`
-	Updated     time.Time `json:"updated"`
+	ID          uint       `gorm:"primaryKey"`
+	Name        string     `json:"name"`
+	Type        string     `json:"type"`
+	Price       float32    `json:"price"`
+	Image       string     `json:"image"`
+	Description string     `json:"description"`
+	Created     time.Time  `json:"created"`
+	Updated     *time.Time `json:"updated"`
 }
 
 type Reservation struct {
-	ID        uint      `gorm:"primaryKey"`
-	From      time.Time `json:"from"`
-	To        time.Time `json:"to"`
-	Remarks   string    `json:"remarks"`
-	AccountID uint      `json:"accountID"`
-	YachtID   uint      `json:"yachtID"`
-	Created   time.Time `json:"created"`
-	Updated   time.Time `json:"updated"`
+	ID        uint       `gorm:"primaryKey"`
+	From      time.Time  `json:"from"`
+	To        time.Time  `json:"to"`
+	Remarks   string     `json:"remarks"`
+	AccountID uint       `json:"accountID"`
+	YachtID   uint       `json:"yachtID"`
+	Created   time.Time  `json:"created"`
+	Updated   *time.Time `json:"updated"`
 }
